# upp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  upp.yml
.github/workflows/: cmake-single-platform.yml
include/: config.h  server.h
src/: config.cpp  main.cpp  server.cpp
static/: index.html
templates/: index.html
